Upgrading jogamp to 2.6.0 - fixed